@@ -1,6 +1,7 @@
 package ch.elexis.core.webdav.internal;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -17,10 +18,10 @@ public class WebdavURLStreamHandlerService extends AbstractURLStreamHandlerServi
 
 	@Override
 	public URLConnection openConnection(URL url) throws IOException {
-		
+
 		String replaced = url.toString().replaceFirst("davs", "https");
 		// TODO fetch token from context?
-		return new WebdavFile(new URL(replaced));
+		return new WebdavFile(URI.create(replaced).toURL());
 	}
 
 }
